--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -66,13 +66,23 @@ body {
 .slick-next:before {
   color: white;
 }
+.popular-items {
+  margin: 15px;
+  padding: 5px;
+  list-style: none;
+  padding-left: 32px;
+  padding-right: 19px;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 8px;
+}
 
 .movie-section-name {
   font-family: 'Roboto';
   font-weight: 600;
   font-size: 16px;
   line-height: 21px;
-  color: #ffffff;
+  color:#0d0d0d;
   margin: 0;
   margin-bottom: 12px;
   margin-left: 32px;
