--- a/src/components/HomeMovieItems/index.css
+++ b/src/components/HomeMovieItems/index.css
@@ -5,6 +5,8 @@ li {
   width: 90px;
   height: 64px;
   border-radius: 8px;
+  margin:5px;
+  padding:5px;
 }
 @media (min-width: 768px) {
   .thumbnail-img {
