--- a/src/components/SimilarMovies/index.css
+++ b/src/components/SimilarMovies/index.css
@@ -15,3 +15,14 @@
     margin-right: 30px;
   }
 }
+
+.popular-items {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  padding-left: 32px;
+  padding-right: 19px;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 8px;
+}
